--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Jonathan Hylton | InfoSec ",
+  "author": "LDAPTive LLC | Customer Engagements info@ldaptive.com",
   "license": "ISC",
   "dependencies": {
     "@azure/ms-rest-nodeauth": "^3.0.3",
